Meta tags added to help the Google indexing

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="description" content="Bfy.me é uma plataforma de agendamento de serviços de beleza a qualquer momento ou dia da semana" />
+    <meta name="keywords" content="bfyme, bfy me, bfy, bfy.me" />
+    <meta name="DC.title" content="A sua beleza toda hora" />
     <title>Bfy.me</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.7.1/slick.min.css">
